--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             // --- WAŻNE! ZMIEŃ TEN ADRES NA ADRES SWOJEGO SERWERA POŚREDNICZĄCEGO Z REPLIT ---
             // Przykład: 'https://moj-discord-api.twojauzytkownik.repl.co/wyslij_wiadomosc'
-            const API_GATEWAY_URL = 'https://mctdc.hiekhiok.repl.co/mctdc/wyslij_wiadomosc';
+            const API_GATEWAY_URL = 'https://mctdc.witeczeq2137.repl.co/mctdc/wyslij_wiadomosc';
             // ----------------------------------------------------------------------------------
 
             const trescWiadomosci = urlParams.get('wiadomosc'); // Parametr 'wiadomosc' z URL
