Update index.html for testing

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
             statusMessageElement.textContent = 'Oczekiwanie na akcję z Minecrafta...';
             statusMessageElement.className = 'info';
         });
+        alert()
     </script>
 </body>
 </html>
